--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     <div class="hero__wrapper" data-aos="fade-up">
                         <h1 class="hero__title">Птичий Двор</h1>
                         <p class="hero__subtitle">Куры различных пород, цыплята бройлеры и несушки, утята, гусята разных пород и возрастов.</p>
-                        <a href="#footer" class="hero__link">Купить</a>
+                        <a href="tel:+375447019287" class="hero__link">Купить</a>
                     </div>
                     <a href="#schedule" class="hero__svg-link">
                         <svg class="hero__arrow-down" data-aos="fade-up" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 513.000000 305.000000" preserveAspectRatio="xMidYMid meet">
